<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_paths"
            android:icon="@drawable/ic_menu_paths"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_phone_monitoring"
            android:icon="@drawable/ic_menu_monitoring"
            android:title="@string/menu_monitoring" />
        <item
            android:id="@+id/nav_notification_list"
            android:icon="@drawable/ic_baseline_notification"
            android:title="@string/label_notifications" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/label_chat" />
    </group>
</menu>